2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined ENABLE_XML_RPC
	* configure.ac
	* configure
	* config.h.in

2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added ExpatXmlRpcRequestProcessor
	* src/ExpatXmlRpcRequestProcessor.cc
	* src/ExpatXmlRpcRequestProcessor.h
	* src/Makefile.am

2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tests for addTorrent and addMetalink command.
	* test/TestUtil.cc
	* test/TestUtil.h
	* test/XmlRpcMethodTest.cc

2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Corrected the description of --file-allocation option.
	* doc/aria2c.1.txt

2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tellAll command.
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use gatherProgress() in TellActiveXmlRpcMethod::process().
	* src/XmlRpcMethodImpl.cc
	
2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added changeGlobalOption command. Currently,
	max-overall-download-limit and max-overall-upload-limit option are
	available.
	* src/RequestGroupMan.h
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-05-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added changeOption command. Currently, max-download-limit,
	max-upload-limit option are available in this command.
	* src/RequestGroup.h
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-05-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added purgeDownloadResult command.
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
